tests/vrs/consts/const_05_missing_type_expected.txt
error: expected `:`, found `=`
     --> tests/vrs/consts/const_05_missing_type.vrs:1:11
      |
    1 |  const FOO = 1234;
      |            ^ help: add `:` here.
